GCC builtin overflow functions: switch a .get(0) to getFirst()